--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Formerly &trade;</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content=
+          "width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+    <body>
+    <div class="center-screen">
+    <h1>Formerly &trade;</h1>
+    </div>
+    </body>
+    </html>
